# NumericalOptimization

./: .gitignore  CMakeLists.txt  ReadMe.md  data.h  data_types.h  main.cpp  optimizer.h  plot.py  read_livsvm_data.h
